[package]
name = "drogue-mpu-6050"
version = "0.1.1"
authors = ["Bob McWhirter <bmcwhirt@redhat.com>"]
edition = "2018"
license = "Apache-2.0"
description = "InvenSense MPU-6050 i2c Driver"
repository = "https://github.com/drogue-iot/drogue-mpu-6050"
keywords = [ "driver", "i2c", "motion", "dmp", "no_std" ]
categories = ["no-std", "embedded"]
readme = "README.md"

[dependencies]
embedded-hal = { version = "0.2.4", features = ["unproven"] }
embedded-time = "0.10.0"
drogue-embedded-timer = "0.2.1"
log = "0.4.11"
libm = "0.2.1"
